; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_lockf.c_lf_owner_matches.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_lockf.c_lf_owner_matches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lock_owner = type { i64, i64, i64 }
%struct.flock = type { i64, i64 }

@F_REMOTE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lock_owner*, i64, %struct.flock*, i32)* @lf_owner_matches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lf_owner_matches(%struct.lock_owner* %0, i64 %1, %struct.flock* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.lock_owner*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.flock*, align 8
  %9 = alloca i32, align 4
  store %struct.lock_owner* %0, %struct.lock_owner** %6, align 8
  store i64 %1, i64* %7, align 8
  store %struct.flock* %2, %struct.flock** %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @F_REMOTE, align 4
  %12 = and i32 %10, %11
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %14, label %33

14:                                               ; preds = %4
  %15 = load %struct.lock_owner*, %struct.lock_owner** %6, align 8
  %16 = getelementptr inbounds %struct.lock_owner, %struct.lock_owner* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  %18 = load %struct.flock*, %struct.flock** %8, align 8
  %19 = getelementptr inbounds %struct.flock, %struct.flock* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp eq i64 %17, %20
  br i1 %21, label %22, label %30

22:                                               ; preds = %14
  %23 = load %struct.lock_owner*, %struct.lock_owner** %6, align 8
  %24 = getelementptr inbounds %struct.lock_owner, %struct.lock_owner* %23, i32 0, i32 1
  %25 = load i64, i64* %24, align 8
  %26 = load %struct.flock*, %struct.flock** %8, align 8
  %27 = getelementptr inbounds %struct.flock, %struct.flock* %26, i32 0, i32 1
  %28 = load i64, i64* %27, align 8
  %29 = icmp eq i64 %25, %28
  br label %30

30:                                               ; preds = %22, %14
  %31 = phi i1 [ false, %14 ], [ %29, %22 ]
  %32 = zext i1 %31 to i32
  store i32 %32, i32* %5, align 4
  br label %40

33:                                               ; preds = %4
  %34 = load %struct.lock_owner*, %struct.lock_owner** %6, align 8
  %35 = getelementptr inbounds %struct.lock_owner, %struct.lock_owner* %34, i32 0, i32 2
  %36 = load i64, i64* %35, align 8
  %37 = load i64, i64* %7, align 8
  %38 = icmp eq i64 %36, %37
  %39 = zext i1 %38 to i32
  store i32 %39, i32* %5, align 4
  br label %40

40:                                               ; preds = %33, %30
  %41 = load i32, i32* %5, align 4
  ret i32 %41
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
